[project]
name = "blogcast-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.134.0",
    "crewai-tools>=0.48.0",
    "embedchain>=0.1.128",
    "instructorembedding>=1.0.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "sentence-transformers>=4.1.0",
    "youtube-transcript-api==0.6.1",
    "yt-dlp==2023.11.14",
]
